--- a/api/view/templates/page_index.html
+++ b/api/view/templates/page_index.html
@@ -5,11 +5,13 @@
     <h2>Starting points</h2>
     <h3>Test endpoints</h3>
     <ul>
+<!--
         <li>
-            <a href="{{ api_endpoint }}/pet/dog/Rex">Dog = Rex</a>
+            <a href="{{ request.host_url }}pet/dog/Rex">Dog = Rex</a>
         </li>
-        <li> <a href="{{ api_endpoint }}/geometry/victoria-places/moonee-valley-racecourse">Moonee Valley Racecourse</a> </li>
-        <li> <a href="{{ api_endpoint }}/geometry/victoria-places/queens-park">Queens Park</a> </li>
+-->
+        <li> <a href="{{ request.host_url }}geometry/victoria-places/moonee-valley-racecourse">Moonee Valley Racecourse</a> </li>
+        <li> <a href="{{ request.host_url }}geometry/victoria-places/queens-park">Queens Park</a> </li>
     </ul>
     
     <h2>More information</h2>
