--- a/api/view/templates/page_index.html
+++ b/api/view/templates/page_index.html
@@ -3,6 +3,11 @@
 {% block content %}
     <h1>Geometry Data API</h1>    
     <h2>Starting points</h2>
+    <h3>Geometry Register</h3>
+    <ul>
+        <li> <a href="{{ request.host_url }}geometry/">Register of Geometries</a> </li>
+    </ul>
+   
     <h3>Test endpoints</h3>
     <ul>
 <!--
