--- a/api/view/templates/geom_page_layout.html
+++ b/api/view/templates/geom_page_layout.html
@@ -19,7 +19,12 @@
     </style>
 </head>
 <body>
-    <div><a href="/">Home</a><div>
+    <div>
+        <ul>
+           <li><a href="/">Home</a></li>
+           <li><a href="/geometry/">Geometry Register</a></li>
+        </ul>
+    <div>
     <div id="container-content">
         {% block content %}{% endblock %}
     </div>
