--- a/api/view/templates/page_geometry.html
+++ b/api/view/templates/page_geometry.html
@@ -2,8 +2,8 @@
 
 {% block content %}
     <h1>Geometry</h1>
-    {{ dataset }}
-    {{ id }}
+    <div class="geomdataset">Dataset: {{ dataset }}</div>
+    <div class="geomid">ID: {{ id }}</div>
 
     <div id="mapid"></div>
 
@@ -16,9 +16,7 @@
 
     
 <script>
-
-
-	var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+	var mymap = L.map('mapid').setView([144.9069089150736, -37.84921977801404], 13);
 
 	L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
 		maxZoom: 18,
