--- a/api/view/templates/layout.html
+++ b/api/view/templates/layout.html
@@ -8,7 +8,7 @@
     <title>Geometry Data API</title>
     {% set css = organisation_branding + '_theme.css' %}
     <link rel="stylesheet" href="{{url_for('static', filename='css/' + css)}}" />
-    <link rel="icon" href="{{url_for('static', filename='img/ga/favicon.ico')}}">
+    <link rel="icon" href="{{url_for('static', filename='img/favicon.ico')}}">
 </head>
 <body>
     {% set header = organisation_branding + '/header.html' %}
