add nav css class

--- a/api/view/templates/geom_page_layout.html
+++ b/api/view/templates/geom_page_layout.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div>
-        <ul>
+        <ul class="nav">
            <li><a href="/">Home</a></li>
            <li><a href="/geometry/">Geometry Register</a></li>
         </ul>
