--- a/api/view/templates/geom_page_layout.html
+++ b/api/view/templates/geom_page_layout.html
@@ -1,12 +1,13 @@
 {% if organisation_branding is not defined %}
-    {% set organisation_branding = 'geometry' %}
+    {% set organisation_branding = 'geom' %}
 {% endif %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <title>Geometry API</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/theme.css')}}" />
+    {% set css = organisation_branding + '_theme.css' %}
+    <link rel="stylesheet" href="{{url_for('static', filename='css/' + css)}}" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
    crossorigin=""/>
