--- a/api/view/templates/page_index.html
+++ b/api/view/templates/page_index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1>Geometry Data API</h1>    
+    <h1>Geometry Data Service</h1>    
     <h2>Starting points</h2>
     <h3>Geometry Register</h3>
     <ul>
@@ -15,8 +15,8 @@
             <a href="{{ request.host_url }}pet/dog/Rex">Dog = Rex</a>
         </li>
 -->
-        <li> <a href="{{ request.host_url }}geometry/victoria-places/moonee-valley-racecourse">Moonee Valley Racecourse</a> </li>
         <li> <a href="{{ request.host_url }}geometry/victoria-places/queens-park">Queens Park</a> </li>
+        <li> <a href="{{ request.host_url }}geometry/landmark/sydney-opera-house">Sydney Opera House</a> </li>
     </ul>
     
     <h2>More information</h2>
