--- a/api/view/templates/page_searchresults.html
+++ b/api/view/templates/page_searchresults.html
@@ -3,14 +3,19 @@
 {% block content %}
     <h1>Search results</h1>
 
-    <p>Found {{count}} matches for lat-long coordinate ({{latlng}}).</p>
+    <p>
+        Found {{count}} matches for lat-long coordinate ({{latlng}}, SRID={{crs}})
+        {% if dataset %}
+          for '<span class='dataset'>{{dataset}}</span>'
+        {% endif %}
+    </p>
 
     {% for r in res %}
     <div>
        <ul>
          <li>ID: {{r.id}}</li>
          <li>Dataset: {{r.dataset}}</li>
-         <li>Link: <a href="{{r.path}}">{{r.path}}</a></li>
+         <li>Link: <a href="{{r.geometry}}">{{r.geometry}}</a></li>
        </ul>
     </div>
     {% endfor %}
