--- a/api/view/templates/page_searchresults.html
+++ b/api/view/templates/page_searchresults.html
@@ -8,6 +8,7 @@
         {% if dataset %}
           for '<span class='dataset'>{{dataset}}</span>'
         {% endif %}
+        <br/>
     </p>
 
     {% for r in res %}
@@ -23,4 +24,8 @@
     </div>
     {% endfor %}
         
+
+    <p>
+        [ <a href="{{request.base_url}}?_format=application/json">View results as JSON</a> ]
+    </p>
 {% endblock %}
