fix link to json results

--- a/api/view/templates/page_searchresults.html
+++ b/api/view/templates/page_searchresults.html
@@ -26,6 +26,6 @@
         
 
     <p>
-        [ <a href="{{request.base_url}}?_format=application/json">View results as JSON</a> ]
+        [ <a href="{{request.url}}&_format=application/json">View results as JSON</a> ]
     </p>
 {% endblock %}
