--- a/api/view/templates/page_index.html
+++ b/api/view/templates/page_index.html
@@ -21,5 +21,6 @@
     
     <h2>More information</h2>
     <p>See the <a href="/about">About Page</a> for more information.</p>
+    <p>See <a href="/api/doc">/api/doc</a> for the OpenAPI description.</p>
 
 {% endblock %}
