--- a/api/view/templates/page_index.html
+++ b/api/view/templates/page_index.html
@@ -6,6 +6,7 @@
     <h3>Geometry Register</h3>
     <ul>
         <li> <a href="{{ request.host_url }}geometry/">Register of Geometries</a> </li>
+        <li> <a href="{{ request.host_url }}dataset/">Register of Datasets</a> </li>
     </ul>
    
     <h3>Test endpoints</h3>
