--- a/api/view/templates/geom_page_layout.html
+++ b/api/view/templates/geom_page_layout.html
@@ -20,12 +20,7 @@
     </style>
 </head>
 <body>
-    <div>
-        <ul class="nav">
-           <li><a href="/">Home</a></li>
-           <li><a href="/geometry/">Geometry Register</a></li>
-        </ul>
-    <div>
+   {% include 'nav.html' %}
     <div id="container-content">
         {% block content %}{% endblock %}
     </div>
