--- a/api/view/templates/alternates.html
+++ b/api/view/templates/alternates.html
@@ -1,4 +1,4 @@
-{% extends "page_layout.html" %}
+{% extends "layout.html" %}
 
 {% block content %}
     <h1>{{ register_name }} Linked Data API</h1>
